Message Generator added
Added message gen to display how it works

--- a/index.html
+++ b/index.html
@@ -31,20 +31,36 @@
             <p>One function provides 1000 randomized messages.</p>
             <p>Positive messages to get you through the hardest of days!</p>
             <a href="https://github.com/Sergiu-Bogdan/Random-Messeage-Generator.git" target="_blank">View Project</a>
+            <br>
+            <a href="#generate-message-btn">Try it out!</a>
         </div>
         <div class="project-card">
             <h3>Upcomming Projects...</h3>
             <p>...</p>
         </div>
     </div>
-</section>
+        </section>
+        <section id="skills">
+            <h2>Skills that I am learning</h2>
+            <ul>
+                <li>HTML</li>
+                <li>CSS</li>
+                <li>JavaScript</li>
+                <li>Python</li>
+                <li>Git & GitHub</li>
+            </ul>
+        </section>
+        <section id="positive-messages">
+            <button id="generate-message-btn" onclick="displayRandomMessage()" class="generate-btn">Generate Message</button>
+            <div id="messageDisplay" class="message-output">
+                <p>Receive a positive message!</p>
+            </div>
+        </section>
         <section id="contact">
-            <h2>Contact</h2>
-            <email>Email: <a href="mailto:sergiuioan.bogdan@gmail.com">sergiuioan.bogdan@gmail.com</a>
-            <p>LinkedIn: <a href="https://www.linkedin.com/in/sergiu-bogdan-067675226" target="_blank">www.linkedin.com/in/Sergiu-Bogdan
-</a></p>
-            <p>GitHub: <a href="https://github.com/Sergiu-Bogdan" target="_blank">https://github.com/Sergiu-Bogdan</a></p>
-        </section>    
+            <p>Email: sergiuioan.bogdan@gmail.com</p>
+            <p>LinkedIn: <a href="https://www.linkedin.com/in/sergiu-bogdan-067675226" target="_blank">LinkedIn Profile</a></p>
+            <p>GitHub: <a href="https://github.com/Sergiu-Bogdan" target="_blank">GitHub Profile</a></p>
+        </section>   
         <!-- rest of your sections -->
     </main>
     <script src="script.js"></script>
